--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/jen6one9/that-note-taker/issues"
   },
-  "homepage": "https://github.com/jen6one9/that-note-taker#readme"
+  "homepage": "https://github.com/jen6one9/that-note-taker#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "fs": "0.0.1-security"
+  }
 }
